--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: auth
   datasource:
-    url: jdbc:mysql://mymysql:3306/auth_test?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://${GATEWAY_HOST}:3306/auth_test?serverTimezone=Asia/Seoul
     username: root
     password: 1q2w3e4r
   jpa:
