--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,31 @@
 
-name: Deploy
+# name: Deploy
 
-on:
-  push:
-    branches: [ "main" ]
+# on:
+#   push:
+#     branches: [ "main" ]
 
-jobs:
-  deploy:
-    runs-on: "ubuntu-latest"
-    permissions:
-      contents: read
+# jobs:
+#   deploy:
+#     runs-on: "ubuntu-latest"
+#     permissions:
+#       contents: read
 
-    steps:
-    - uses: actions/checkout@v4
-      # 이게 ssh username@ip
-    - name: executing remote ssh commands using password 
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.PASSWORD }}
-        script: |
-          cd ci-server
-          git pull
-          sh gradlew build 
-          nohup java -jar build/libs/*T.jar >a.out 2>&1 &
-          echo hello
+#     steps:
+#     - uses: actions/checkout@v4
+#       # 이게 ssh username@ip
+#     - name: executing remote ssh commands using password 
+#       uses: appleboy/ssh-action@v1.0.3
+#       with:
+#         host: ${{ secrets.HOST }}
+#         username: ${{ secrets.USERNAME }}
+#         key: ${{ secrets.PASSWORD }}
+#         script: |
+#           cd ci-server
+#           git pull
+#           sh gradlew build 
+#           nohup java -jar build/libs/*T.jar >a.out 2>&1 &
+#           echo hello
           
 
 
